#17 Fixed alignment of components by adding overflow to big/small screens using media queries

--- a/frontend/src/app/App.css
+++ b/frontend/src/app/App.css
@@ -26,6 +26,9 @@ body {
   .header {
     font-size: 1.5vw;
   }
+  .app {
+    overflow-y: hidden;
+  }
 }
 
 @media screen and (max-width: 550px){
@@ -49,6 +52,7 @@ body {
 .sidebar {
   background-color: #1B1717;
   width: 100%;
+  height: 100%;
   padding: 0 3vh 0 3vh;
   flex-shrink: 5;
   background: linear-gradient( #372e2e 10%, #1B1717 100%);
