--- a/frontend/src/components/FilmGrid/FilmGrid.css
+++ b/frontend/src/components/FilmGrid/FilmGrid.css
@@ -7,13 +7,14 @@
     background-color: #d7d7d7;
     width: 100%;
     padding: 3vh;
-    overflow-y: auto;
 }
 
 .filmgrid-wrapper {
     margin: 5% 5%;
     width: 100%;
     height: 100%;
+    background-color: #d7d7d7;
+    padding: 3vh;
 }
 
 .searchFeedback {
@@ -26,4 +27,10 @@
     height: 100%;
     gap: 10px;
     justify-items: center;
+}
+
+@media (min-width: 600px) {
+    .filmgrid {
+        overflow-y: auto;
+    }
 }
